# django-data-engine

./: .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: autofix.yml  ci.yml  dependabot-auto.yml  stale.yml
config/: asgi.py  settings.py  urls.py
demo/: admin.py  apps.py  import_configs.py  models.py  urls.py  views.py
demo/migrations/: 0001_initial.py
import_engine/: __init__.py  admin.py  apps.py  conf.py  tests.py
import_engine/api/: file_validators.py  mixins.py  throttling.py  urls.py
import_engine/domain/: config_registry.py  mixins.py
import_engine/execution_engine/: orchestrator.py
import_engine/migrations/: 0001_initial.py  0002_importjob_field_mapping.py  0003_alter_importjob_created_at_alter_importjob_status_and_more.py  0004_importstaging.py  0005_importchunk_created_ids_and_more.py
import_engine/observability/: metrics.py
import_engine/parsing/: base_adapter.py  csv_adapter.py  excel_adapter.py  header_mapper.py
import_engine/services/: audit_service.py  auto_config_service.py  chunk_generator.py  dedupe_service.py  diagnostic_service.py  encryption_service.py  header_mapper.py  load_guard.py  persistence.py  rollback_service.py  security_service.py  upload_service.py
import_engine/tasks/: __init__.py  cleanup_tasks.py  processing_tasks.py  security_tasks.py
import_engine/tests/: base.py  runner.py  test_dsl_matrix.py  test_excel_protection_matrix.py  test_feature_matrix.py  test_infrastructure_resilience.py  test_integrity_matrices.py  test_legacy.py  test_pii_masking.py  test_security_vectors.py
import_engine/utils/: storage.py  template_generator.py
import_engine/validators/: dsl.py
(+22 files in other folders)
